@@ -1,27 +1,30 @@
 package com.mimecast.robin.queue;
 
 import com.mimecast.robin.smtp.session.Session;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.parallel.Execution;
 import org.junit.jupiter.api.parallel.ExecutionMode;
 
-import java.io.File;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
-import java.util.UUID;
+import java.util.Set;
+import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
- * Tests for queue control operations (delete, retry, bounce).
+ * Tests for queue control operations against the hard-refactored queue API.
  * <p>These tests use a singleton queue instance, so they must run serially to avoid interference.
  */
-@TestMethodOrder(MethodOrderer.MethodName.class)
 @Execution(ExecutionMode.SAME_THREAD)
 class QueueControlsTest {
 
-    static PersistentQueue<RelaySession> queue;
+    private static PersistentQueue<RelaySession> queue;
 
     @BeforeAll
     static void before() {
@@ -30,172 +33,142 @@ class QueueControlsTest {
 
     @AfterAll
     static void after() {
+        queue.clear();
         queue.close();
     }
 
     @BeforeEach
     void setUp() {
-        // Clear queue before each test.
         queue.clear();
     }
 
     @Test
-    void testRemoveByIndex() {
-        // Enqueue 3 items.
-        queue.enqueue(new RelaySession(new Session().setUID("1")));
-        queue.enqueue(new RelaySession(new Session().setUID("2")));
-        queue.enqueue(new RelaySession(new Session().setUID("3")));
+    void testDeleteByUID() {
+        RelaySession first = enqueueSession("1");
+        RelaySession second = enqueueSession("2");
+        RelaySession third = enqueueSession("3");
 
         assertEquals(3, queue.size());
-
-        // Remove middle item (index 1).
-        assertTrue(queue.removeByIndex(1));
+        assertTrue(queue.deleteByUID(second.getUID()));
         assertEquals(2, queue.size());
-
-        // Verify remaining items.
-        List<RelaySession> items = queue.snapshot();
-        assertEquals("1", items.get(0).getSession().getUID());
-        assertEquals("3", items.get(1).getSession().getUID());
+        assertEquals(Set.of("1", "3"), activeSessionUids());
+        assertFalse(queue.deleteByUID(second.getUID()));
+        assertNotNull(first);
+        assertNotNull(third);
     }
 
     @Test
-    void testRemoveByIndexOutOfBounds() {
-        queue.enqueue(new RelaySession(new Session().setUID("1")));
+    void testDeleteByUIDMissingItemReturnsFalse() {
+        enqueueSession("1");
 
-        // Try to remove index out of bounds.
-        assertFalse(queue.removeByIndex(5));
-        assertFalse(queue.removeByIndex(-1));
-
-        // Queue should be unchanged.
+        assertFalse(queue.deleteByUID("missing"));
         assertEquals(1, queue.size());
     }
 
     @Test
-    void testRemoveByIndices() {
-        // Enqueue 5 items.
-        for (int i = 1; i <= 5; i++) {
-            queue.enqueue(new RelaySession(new Session().setUID(String.valueOf(i))));
-        }
+    void testDeleteByUIDs() {
+        RelaySession first = enqueueSession("1");
+        RelaySession second = enqueueSession("2");
+        RelaySession third = enqueueSession("3");
+        RelaySession fourth = enqueueSession("4");
+        RelaySession fifth = enqueueSession("5");
 
-        assertEquals(5, queue.size());
+        int removed = queue.deleteByUIDs(List.of(second.getUID(), fourth.getUID()));
 
-        // Remove indices 1, 3 (UIDs 2 and 4).
-        int removed = queue.removeByIndices(Arrays.asList(1, 3));
         assertEquals(2, removed);
         assertEquals(3, queue.size());
-
-        // Verify remaining items.
-        List<RelaySession> items = queue.snapshot();
-        assertEquals("1", items.get(0).getSession().getUID());
-        assertEquals("3", items.get(1).getSession().getUID());
-        assertEquals("5", items.get(2).getSession().getUID());
+        assertEquals(Set.of("1", "3", "5"), activeSessionUids());
+        assertNotNull(first);
+        assertNotNull(third);
+        assertNotNull(fifth);
     }
 
     @Test
-    void testRemoveByIndicesSomeOutOfBounds() {
-        // Enqueue 3 items.
-        queue.enqueue(new RelaySession(new Session().setUID("1")));
-        queue.enqueue(new RelaySession(new Session().setUID("2")));
-        queue.enqueue(new RelaySession(new Session().setUID("3")));
+    void testDeleteByUIDsIgnoresMissingItems() {
+        RelaySession first = enqueueSession("1");
+        RelaySession second = enqueueSession("2");
+        RelaySession third = enqueueSession("3");
 
-        // Remove indices 1 (valid) and 10 (invalid).
-        int removed = queue.removeByIndices(Arrays.asList(1, 10));
+        int removed = queue.deleteByUIDs(List.of(second.getUID(), "missing"));
+
         assertEquals(1, removed);
         assertEquals(2, queue.size());
-
-        // Verify remaining items.
-        List<RelaySession> items = queue.snapshot();
-        assertEquals("1", items.get(0).getSession().getUID());
-        assertEquals("3", items.get(1).getSession().getUID());
-    }
-
-    @Test
-    void testRemoveByIndicesEmpty() {
-        queue.enqueue(new RelaySession(new Session().setUID("1")));
-
-        // Remove empty list.
-        int removed = queue.removeByIndices(Arrays.asList());
-        assertEquals(0, removed);
-        assertEquals(1, queue.size());
+        assertEquals(Set.of("1", "3"), activeSessionUids());
+        assertNotNull(first);
+        assertNotNull(third);
     }
 
     @Test
     void testClear() {
-        // Enqueue multiple items.
         for (int i = 1; i <= 10; i++) {
-            queue.enqueue(new RelaySession(new Session().setUID(String.valueOf(i))));
+            enqueueSession(String.valueOf(i));
         }
 
-        assertEquals(10, queue.size());
-
-        // Clear the queue.
         queue.clear();
+
         assertEquals(0, queue.size());
         assertTrue(queue.isEmpty());
     }
 
     @Test
     void testRetryWorkflow() {
-        // Create a relay session and enqueue it.
-        RelaySession relaySession = new RelaySession(new Session().setUID("test-retry"));
+        RelaySession relaySession = enqueueSession("retry");
+
         assertEquals(0, relaySession.getRetryCount());
+        assertTrue(queue.retryNow(relaySession.getUID()));
 
-        queue.enqueue(relaySession);
-
-        // Simulate retry: dequeue, bump retry count, re-enqueue.
-        RelaySession item = queue.dequeue();
+        QueueItem<RelaySession> item = queue.getByUID(relaySession.getUID());
         assertNotNull(item);
-        assertEquals(0, item.getRetryCount());
-
-        item.bumpRetryCount();
+        assertEquals(QueueItemState.READY, item.getState());
         assertEquals(1, item.getRetryCount());
-
-        queue.enqueue(item);
-
-        // Verify it's back in the queue with incremented retry count.
-        assertEquals(1, queue.size());
-        RelaySession requeued = queue.peek();
-        assertEquals("test-retry", requeued.getSession().getUID());
-        assertEquals(1, requeued.getRetryCount());
+        assertEquals(1, item.getPayload().getRetryCount());
     }
 
     @Test
-    void testBulkOperations() {
-        // Enqueue 10 items.
-        for (int i = 0; i < 10; i++) {
-            queue.enqueue(new RelaySession(new Session().setUID("item-" + i)));
+    void testBulkDeleteLeavesExpectedItems() {
+        RelaySession[] sessions = new RelaySession[10];
+        for (int i = 0; i < sessions.length; i++) {
+            sessions[i] = enqueueSession("item-" + i);
         }
 
-        assertEquals(10, queue.size());
+        int removed = queue.deleteByUIDs(List.of(
+                sessions[0].getUID(),
+                sessions[2].getUID(),
+                sessions[4].getUID(),
+                sessions[6].getUID(),
+                sessions[8].getUID()
+        ));
 
-        // Bulk delete indices 0, 2, 4, 6, 8 (even indices).
-        int removed = queue.removeByIndices(Arrays.asList(0, 2, 4, 6, 8));
         assertEquals(5, removed);
         assertEquals(5, queue.size());
-
-        // Verify remaining items are odd indices.
-        List<RelaySession> items = queue.snapshot();
-        assertEquals("item-1", items.get(0).getSession().getUID());
-        assertEquals("item-3", items.get(1).getSession().getUID());
-        assertEquals("item-5", items.get(2).getSession().getUID());
-        assertEquals("item-7", items.get(3).getSession().getUID());
-        assertEquals("item-9", items.get(4).getSession().getUID());
+        assertEquals(Set.of("item-1", "item-3", "item-5", "item-7", "item-9"), activeSessionUids());
     }
 
     @Test
-    void testRemoveLastItem() {
-        queue.enqueue(new RelaySession(new Session().setUID("only")));
+    void testDeleteLastItem() {
+        RelaySession only = enqueueSession("only");
 
-        assertTrue(queue.removeByIndex(0));
+        assertTrue(queue.deleteByUID(only.getUID()));
         assertTrue(queue.isEmpty());
         assertEquals(0, queue.size());
     }
 
     @Test
-    void testRemoveFromEmptyQueue() {
+    void testDeleteFromEmptyQueue() {
         assertTrue(queue.isEmpty());
+        assertFalse(queue.deleteByUID("missing"));
+        assertEquals(0, queue.deleteByUIDs(List.of("a", "b", "c")));
+    }
 
-        assertFalse(queue.removeByIndex(0));
-        assertEquals(0, queue.removeByIndices(Arrays.asList(0, 1, 2)));
+    private RelaySession enqueueSession(String sessionUid) {
+        RelaySession relaySession = new RelaySession(new Session().setUID(sessionUid));
+        queue.enqueue(relaySession);
+        return relaySession;
+    }
+
+    private Set<String> activeSessionUids() {
+        return queue.list(0, 100, QueueListFilter.activeOnly()).items().stream()
+                .map(item -> item.getPayload().getSession().getUID())
+                .collect(Collectors.toSet());
     }
 }
